--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_en.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_en.properties
@@ -6,7 +6,7 @@ minimum=Minimum
 average=Average
 seconds=Seconds
 NORMAL_DISTRIBUTION=Normal distribution
-config=Edit config
+config=Config graph
 title=Response time
 PLOT_TYPE=Plot Type
 bars=Bars
@@ -27,3 +27,6 @@ return=Return
 process=Process
 DEFAULT_VIEW=Default view
 time=Time
+maxTime=Maximum time
+minTime=Minimum time
+avgTime=Average time
