--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_es.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_es.properties
@@ -6,7 +6,7 @@ minimum=M\u00ednimo
 average=Promedio
 seconds=Segundos
 NORMAL_DISTRIBUTION=Distribuci\u00f3n normal
-config=Configurar
+config=Configurar gr\u00e1fica
 title=Tiempo del caso
 PLOT_TYPE=Tipo de Gr\u00e1fica
 bars=Barras
@@ -27,3 +27,6 @@ return=Regresar
 process=Proceso
 DEFAULT_VIEW=Vista por defecto
 time=Tiempo
+maxTime=Tiempo m\u00e1ximo
+minTime=Tiempo m\u00ednimo
+avgTime=Tiempo promedio
