--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_es.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_es.properties
@@ -27,6 +27,6 @@ return=Regresar
 process=Proceso
 DEFAULT_VIEW=Vista por defecto
 time=Tiempo
-maxTime=Tiempo m\u00e1ximo
-minTime=Tiempo m\u00ednimo
-avgTime=Tiempo promedio
+maxTime=Tiempo m\u00e1ximo:
+minTime=Tiempo m\u00ednimo:
+avgTime=Tiempo promedio:
