--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_en.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_en.properties
@@ -27,6 +27,6 @@ return=Return
 process=Process
 DEFAULT_VIEW=Default view
 time=Time
-maxTime=Maximum time
-minTime=Minimum time
-avgTime=Average time
+maxTime=Maximum time:
+minTime=Minimum time:
+avgTime=Average time:
