--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_es.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_es.properties
@@ -30,3 +30,8 @@ time=Tiempo
 maxTime=Tiempo m\u00e1ximo:
 minTime=Tiempo m\u00ednimo:
 avgTime=Tiempo promedio:
+LOG=Historial
+lastWeek=\u00daltima semana
+lastMonth=\u00daltimo mes
+lastYear=\u00dailtimo a\u00f1o
+showLog=Mostrar historial
