--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_en.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ResponseCase_en.properties
@@ -30,3 +30,8 @@ time=Time
 maxTime=Maximum time:
 minTime=Minimum time:
 avgTime=Average time:
+LOG=Log config
+lastWeek=Last week
+lastMonth=Last month
+lastYear=Last year
+showLog=Show log graph
