Se agregó configuración para detalle de propiedades a editar

--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource_en.properties
@@ -15,9 +15,9 @@ statmsg1=New item added correctly.
 statmsg2=Item sucessfully removed.
 searchInProperties=Search in selected properties
 btnReload=Reload page
-erroMsgConfig=Error en la configuraci\u00f3n de la colecci\u00f3n
+erroMsgConfig=Catalog configuration error
 msgMissingConfigClass=Need to configure and / or select the collection class
-msgConfigInstructions=Return to the tab collection information, select the class and save the change.
+msgConfigInstructions=Return to the catalog tab information, select the class and save the change.
 btnConfig=Config
 errorMsgConfig=Properties configuration
 msgMissingConfigProperties=Properties display configuration missing.
@@ -32,3 +32,6 @@ btnSave=Save
 btn_updt=Update
 up=up
 down=down
+btnAdd2detail=Add to detail
+th_MODE_VIEW=Property mode
+th_FOR_CREATE=Show on create
