Se agrego filtrado por grupo de usuario y se agrego validacion de tipo de archivos

--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ProcessFileRepository_en.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ProcessFileRepository_en.properties
@@ -324,3 +324,4 @@ mustBeSigned=You must be signed to use the document repository.
 msgBTNUpdate=Update
 btnBack=Back
 msgNextVersion=Next version
+msgValidFiles=Extensiones de archivos validos separados por '|'
