--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/kpi/ProcessKPI_en.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/kpi/ProcessKPI_en.properties
@@ -18,3 +18,5 @@ instanceTitle = Process instances
 closed=Closed
 active=Active
 aborted=Aborted
+msgError1=No process instances found
+MsgError2=No process found
