--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/SWBAScheduleProcess_en.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/SWBAScheduleProcess_en.properties
@@ -38,7 +38,7 @@ frmSaturday=Saturday
 
 frmMonthly=Monthly
 
-frmTheDay=The
+frmTheDay=From the day
 
 frmOfEvery=of every
 
@@ -129,3 +129,4 @@ statmsg4=Schedule removed
 frmInterval=Interval (min)
 frmTimeInterval=Time interval
 frmTemporizador=Waiting time (min)
+frmTheDayTo=to
