--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/SWBAScheduleProcess_pt.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/SWBAScheduleProcess_pt.properties
@@ -38,7 +38,7 @@ frmSaturday=Sabado
 
 frmMonthly=Mensal
 
-frmTheDay=De dia
+frmTheDay=Del dia
 
 frmOfEvery=de cada
 
@@ -129,3 +129,4 @@ statmsg4=Se elimino calendarizacion.
 frmInterval=Intervalo (min)
 frmTimeInterval=S\u00e9rie
 frmTemporizador=Tempo de espera (min)
+frmTheDayTo=al
