--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBASchedule_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBASchedule_en.properties
@@ -38,7 +38,7 @@ frmSaturday=Saturday
 
 frmMonthly=Monthly
 
-frmTheDay=The
+frmTheDay=From The day
 
 frmOfEvery=of every
 
@@ -126,3 +126,4 @@ statmsg1=Added correct Schedule.
 statmsg2=The schedule was updated correctly.
 statmsg3=Schedule updated
 statmsg4=Schedule removed
+frmTheDayTo=to
