--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBASchedule_pt.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBASchedule_pt.properties
@@ -1,8 +1,8 @@
 # Sample ResourceBundle properties file
 
-frmScheduleTitle=Per\u00EDodos de agendamento associado
+frmScheduleTitle=Per\u00edodos de agendamento associado
 
-frmTitle=T\u00EDtulo:
+frmTitle=T\u00edtulo:
 
 frmNewRule=Novo Agendamento
 
@@ -12,7 +12,7 @@ frmStartDate=A partir de (mm/dd/aaaa)
 
 frmEndDate=Finaliza o (mm/dd/aaaa)
 
-frmNoEndDate=Sem data de finaliza\u00E7\u00E3o
+frmNoEndDate=Sem data de finaliza\u00e7\u00e3o
 
 frmStartHour=Hora de inicio (hh:mm)
 
@@ -26,7 +26,7 @@ frmSunday=Domingo
 
 frmMonday=Segunda-feira
 
-frmTuesday=Ter\u00E7a-feira
+frmTuesday=Ter\u00e7a-feira
 
 frmWednesday=Quarta-feira
 
@@ -38,7 +38,7 @@ frmSaturday=Sabado
 
 frmMonthly=Mensal
 
-frmTheDay=De dia
+frmTheDay=Del dia
 
 frmOfEvery=de cada
 
@@ -54,7 +54,7 @@ frmThird=Terceiro
 
 frmFourth=Quarto
 
-frmLast=\u00DAltimo
+frmLast=\u00daltimo
 
 frmSun=Dom
 
@@ -78,7 +78,7 @@ frmJanuary=Janeiro
 
 frmFebruary=Fevereiro
 
-frmMarch=Mar\u00E7o
+frmMarch=Mar\u00e7o
 
 frmApril=Abril
 
@@ -102,27 +102,28 @@ frmYears=anos
 
 btnSend=Salvar
 
-jsHourAlert=A hora deve estar entre \u00E0s 0:00 e \u00E0s 23:59.
+jsHourAlert=A hora deve estar entre \u00e0s 0:00 e \u00e0s 23:59.
 
-jsNotAMPM=N\u00E3o e necess\u00E1rio indicar AM ou PM.
+jsNotAMPM=N\u00e3o e necess\u00e1rio indicar AM ou PM.
 
-jsMinutes=Os minutos devem ser um n\u00FAmero entre 00 e 59.
+jsMinutes=Os minutos devem ser um n\u00famero entre 00 e 59.
 
-jsSeconds=Os segundos devem ser um n\u00FAmero entre 00 e 59.
+jsSeconds=Os segundos devem ser um n\u00famero entre 00 e 59.
 
-jsBadFormat=Esse formato de hora n\u00E3o \u00E9 v\u00E1lido. Os formatos v\u00E1lidos s\u00E3o 0:00 e 0:00:00.
+jsBadFormat=Esse formato de hora n\u00e3o \u00e9 v\u00e1lido. Os formatos v\u00e1lidos s\u00e3o 0:00 e 0:00:00.
 
-jsEmptyField=O campo n\u00E3o pode estar vazio.
+jsEmptyField=O campo n\u00e3o pode estar vazio.
 
-frmColTitle=T\u00EDtulo
+frmColTitle=T\u00edtulo
 
 frmColRemove=Deletar
 
 keyJSCalendar=calendar_es.js
 btn_addnew=Adicionar Novo
-th_action=Ac\u00E7\u00E3o
-confirm_remove=Tem certeza de que deseja excluir este hor\u00E1rio?
-statmsg1=\u00C9 acrescentado ao calend\u00E1rio.
-statmsg2=O calend\u00E1rio foi atualizado corretamente.
-statmsg3=Ela foi atualizada com sucesso o estatuto do calend\u00E1rio
+th_action=Ac\u00e7\u00e3o
+confirm_remove=Tem certeza de que deseja excluir este hor\u00e1rio?
+statmsg1=\u00c9 acrescentado ao calend\u00e1rio.
+statmsg2=O calend\u00e1rio foi atualizado corretamente.
+statmsg3=Ela foi atualizada com sucesso o estatuto do calend\u00e1rio
 statmsg4=Se elimino calendarizacion.
+frmTheDayTo=al
