--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource_en.properties
@@ -2,7 +2,7 @@
 # and open the template in the editor.
 
 Save_config=Save
-Add_Instance=Add Instance
+Add_Instance=Add
 frmBusqueda=Search
 btnBack=Return
 booleanYes=Yes
@@ -13,7 +13,7 @@ confirm_remove=Are you shure want to remove this element
 documentAdmin=Element administration
 statmsg1=New item added correctly.
 statmsg2=Item sucessfully removed.
-searchInProperties=Search in selected properties
+searchInProperties=Search
 btnReload=Reload page
 erroMsgConfig=Catalog configuration error
 msgMissingConfigClass=Need to configure and / or select the collection class
