--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_en.properties
@@ -1,9 +1,7 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
-add=Post your comments
+lblComments=Coments
+add=Add your comment
 nameLabel=Full name
-emailLabel=Valid e-mail address
+emailLabel=Email
 publish=Post comment
 comment=Comment
 msgEditorial=Attention: This tool is intended to allow the interchange of ideas in a responsable way, hence we reserve the right to remove or edit any comment with obscene, offensive or pornographic content in addition to those not related with the theme issued.
@@ -12,3 +10,5 @@ anotherCode=Generate another code
 writeAtLabel=wrote on
 msgWrongCode=The security code typed in was incorrect. In case it is not clear enough you can change it by clicking on the "Generate another code" button.
 msgLoggInFirst=In order to post comments, please sign-in first.
+noElement=There is no element to comment
+ago=Ago
