--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_pt.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_pt.properties
@@ -1,14 +1,14 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
+lblComments=Comentarios
 add=Agrega tu comentario
 nameLabel=Nombre completo
-emailLabel=Tu correo electr\u00F3nico v\u00E1lido
+emailLabel=Correo electr\u00f3nico
 publish=Publicar comentario
 comment=Comentario
-msgEditorial=Aviso: Esta herramienta tiene la finalidad de permitir el intercambio de ideas de manera responsable, por este motivo nos reservamos el derecho de remover o editar comentarios de contenido obsceno, injurioso, pornogr\u00E1fico o sin relaci\u00F3n al tema publicado.
-msgSpam=Para enviar tu comentario ingresa la palabras que se muestran abajo. En caso de no ser suficientemente claras, las puedes cambiar haciendo clic en "Generar otro c\u00F3digo".
-anotherCode=Generar otro c\u00F3digo
-writeAtLabel=escribi\u00F3 el
-msgWrongCode=El c\u00F3digo de seguridad es incorrecto. En caso de no ser claro c\u00E1mbialo haciendo clic en <<Generar otro c\u00F3digo>>.
+msgEditorial=Aviso: Esta herramienta tiene la finalidad de permitir el intercambio de ideas de manera responsable, por este motivo nos reservamos el derecho de remover o editar comentarios de contenido obsceno, injurioso, pornogr\u00e1fico o sin relaci\u00f3n al tema publicado.
+msgSpam=Para enviar tu comentario ingresa la palabras que se muestra abajo. En caso de no ser suficientemente claras, las puedes cambiar dando clic en "Otro c\u00f3digo".
+anotherCode=Generar otro c\u00f3digo
+writeAtLabel=escribi\u00f3 el
+msgWrongCode=El c\u00f3digo de seguridad es incorrecto. En caso de no ser claro c\u00e1mbialo haciendo clic en <<Generar otro c\u00f3digo>>.
 msgLoggInFirst=Si desea realizar comentarios sobre esta informaci&oacute;n deber&aacute; firmarse primero, gracias.
+noElement=No existe un elemento para comentar
+ago=Hace
