--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_en.properties
@@ -1,14 +1,16 @@
-lblComments=Coments
+lblComments=Comments
 add=Add your comment
 nameLabel=Full name
 emailLabel=Email
-publish=Post comment
+publish=Post a comment
 comment=Comment
-msgEditorial=Attention: This tool is intended to allow the interchange of ideas in a responsable way, hence we reserve the right to remove or edit any comment with obscene, offensive or pornographic content in addition to those not related with the theme issued.
-msgSpam=In order to post your comment, type the characters showed below in the text box provided. In case they are not clear enough you can change them clicking on the "Generate another code" button.
-anotherCode=Generate another code
+msgEditorial=Warning: This tool is intended to allow the exchange of ideas in a responsible, for this reason we reserve the right to remove or edit comments that are obscene, libelous, pornographic or unrelated to the subject published.
+msgSpam=To post a comment enter the words below. In case of not being sufficiently clear, the can change by clicking on "Another code."
+anotherCode=Generate other code
 writeAtLabel=wrote on
-msgWrongCode=The security code typed in was incorrect. In case it is not clear enough you can change it by clicking on the "Generate another code" button.
-msgLoggInFirst=In order to post comments, please sign-in first.
+msgWrongCode=The security code is incorrect. Failure to be clear change it by clicking <<Generate other c\u00f3digo>>.
+msgLoggInFirst=If you have comments regarding this information should be signed first, thank you.
 noElement=There is no element to comment
 ago=Ago
+noComment=No comments
+viewAllComments=View all comments
