--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_pt.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement_pt.properties
@@ -1,14 +1,16 @@
-lblComments=Comentarios
-add=Agrega tu comentario
-nameLabel=Nombre completo
+lblComments=Coment\u00e1rios
+add=Adicione seu coment\u00e1rio
+nameLabel=Nome completo
 emailLabel=Correo electr\u00f3nico
-publish=Publicar comentario
-comment=Comentario
-msgEditorial=Aviso: Esta herramienta tiene la finalidad de permitir el intercambio de ideas de manera responsable, por este motivo nos reservamos el derecho de remover o editar comentarios de contenido obsceno, injurioso, pornogr\u00e1fico o sin relaci\u00f3n al tema publicado.
-msgSpam=Para enviar tu comentario ingresa la palabras que se muestra abajo. En caso de no ser suficientemente claras, las puedes cambiar dando clic en "Otro c\u00f3digo".
-anotherCode=Generar otro c\u00f3digo
-writeAtLabel=escribi\u00f3 el
-msgWrongCode=El c\u00f3digo de seguridad es incorrecto. En caso de no ser claro c\u00e1mbialo haciendo clic en <<Generar otro c\u00f3digo>>.
-msgLoggInFirst=Si desea realizar comentarios sobre esta informaci&oacute;n deber&aacute; firmarse primero, gracias.
-noElement=No existe un elemento para comentar
-ago=Hace
+publish=Publicar um coment\u00e1rio
+comment=Coment\u00e1rio
+msgEditorial=Aviso: Esta ferramenta destina-se permitir a troca de id\u00e9ias de forma respons\u00e1vel, por este motivo nos reservamos o direito de remover ou editar coment\u00e1rios que s\u00e3o obsceno, pornogr\u00e1fico ou n\u00e3o relacionados ao assunto publicado.
+msgSpam=Para deixar um coment\u00e1rio digite as palavras abaixo. Em caso de n\u00e3o ser suficientemente clara, o pode mudar clicando em "c\u00f3digo de Outro".
+anotherCode=Gerar outro c\u00f3digo
+writeAtLabel=escreveu em
+msgWrongCode=O c\u00f3digo de seguran\u00e7a \u00e9 incorreta. Incapacidade de ser claro alter\u00e1-lo clicando <<Generate outras c\u00f3digo>>.
+msgLoggInFirst=Se voc\u00ea tem coment\u00e1rios sobre esta informa\u00e7\u00e3o deve ser assinado em primeiro lugar, obrigado.
+noElement=N\u00e3o h\u00e1 nenhum elemento a comentar
+ago=Atr\u00e1s
+noComment=Sem coment\u00e1rios
+viewAllComments=Ver todos os coment\u00e1rios
