--- a/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/AudioPromotion_en.properties
+++ b/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/AudioPromotion_en.properties
@@ -6,3 +6,5 @@ lblDoAdminSelectOne=Select
 lblDoAdminSave=Save
 lblDoAdminReset=Reset
 msgDoViewSeeMore=See more
+msgDoViewMorePodcasts=More podcasts
+msgDoViewNoPodcast=No podcasts
