--- a/SWB4/swb/web/changes.txt
+++ b/SWB4/swb/web/changes.txt
@@ -1,3 +1,6 @@
+  4.2.0.2
+    - Se agrego cache de objetos no encontrados en base de datos (Jei)
+    - 
   4.2.0.0
     - Rediseño de la capa interna de SWBPlatform (SemanticObject) para incrementar rendimiento (Jei)
     - Mejoras en el Soporte a Balanceo de Instancias (Jei)
