--- a/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/FavoriteAudios_en.properties
+++ b/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/FavoriteAudios_en.properties
@@ -8,3 +8,7 @@ lblDoAdminReset=Reset
 msgDoViewSeeMore=See more
 msgDoViewMostLiked=Most liked
 msgDoViewNoPodcast=No podcasts
+lblDoViewBy=By
+lblDoViewListen=Listen
+lblDoViewDownload=Download
+lblDoViewFormat=format
