--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -32,9 +32,10 @@ lblSecondLastName=Segundo apellido
 promptMsgSecondLastName=Ingresa tu segundo apellido
 lblSecondLastNameFault=Segundo apellido invalido
 
-lblPhone=Telefono
-promptMsgPhone=Ingresa tu numero telefonico ########
-lblPhoneFault=Telefono invalido
+lblBirthday=Fecha de nacimiento
+promptMsgBirthday=Ingresa tu fecha de nacimiento
+lblBirthdayFault=Fecha de nacimiento invalida
+msgErrLastNameRequired=Fecha de nacimiento requerida
 
 lblCaptcha=Ingresa el texto de la imagen
 lblTryRead=\u00bfNo lo puedes ver?
@@ -43,6 +44,7 @@ msgErrSecureCodeRequired=El codigo es requerido
 
 lblReset=Borrar
 lblSubmit=Enviar
+lblSave=Guardar
 
 msgErrUserAlreadySigned=msgErrUserAlreadySigned
 msgErrUserAlreadyExists=El usuario ya habia sido dado de alta
@@ -51,17 +53,70 @@ msgErrUserAlreadyExists=El usuario ya habia sido dado de alta
 msgSubject=Correo de confirmaci\u00f3n
 
 #Dados personales
-lblCURP=
-promptMsgCURP=
-lblCURPFault=
+lblCurp=CURP
+promptMsgCurp=Ingresa tu CURP
+lblCurpFault=CURP Invalido
 
-lbl=
-promptMsg=
-lblFault=
+lblGenderFem=Femenino
+lblGenderMas=Masculino
+promptMsgGender=Ingresa tu genero
+lblGenderFault=Genero invalido
 
-lblBirthday=
-promptMsgBirthday=
-lblBirthdayFault=
+lblState=Entidad de nacimiento
+promptMsgState=Ingresa tu entidada de nacimiento
+lblGenderFault=Entidad Invalida
+
+lblNationality=Nacionalidad
+promptMsgNationality=Ingresa tu nacionalidad
+lblNationalityFault=Nacionalidad invalida
+
+lblFm2=FM2 Vigente
+promptMsgFm2=Ingresa tu FM2 Vigente
+lblFm2Fault=FM" invalida
+
+lblPhone=Telefono
+lblPhoneLada=Lada
+lblPhoneExt=Extencion
+lblPhoneType=Tipo
+promptMsgPhone=Ingresa tu numero telefonico ########
+lblPhoneFault=Telefono invalido
+
+lblSLabor=Situacion laboral actual
+promptMsgSLabor=promptMsgSLabor
+lblFaultSLabor=lblFaultSLabor
+
+lblAvailability=Disponibilidad en dias habiles
+lblAvailabilityMo=Lunes
+lblAvailabilityTu=Martes
+lblAvailabilityWe=Miercoles
+lblAvailabilityTh=Jueves
+lblAvailabilityFr=Viernes
+lblAvailabilitySa=Sabado
+lblAvailabilitySu=Domingo
+promptMsgAvailability=promptMsgAvailability
+lblAvailabilityFault=lblAvailabilityFault
+
+lblFacebook=Facebook
+promptMsgFacebook=Ingresa cuenta de Facebook
+lblFacebookFault=Cuenta de Facebook invalida
+
+lblSkype=Skype
+promptMsgSkype=Ingresa cuenta de Skype
+lblSkypeFault=Cuenta de Skype invalida
+
+lblMsn=MSN
+promptMsgMsn=Ingresa cuenta de MSN
+lblMsnFault=Cuenta de MSN invalida
+
+lblLinkedin=Linkedin
+promptMsgLinkedin=Ingresa cuenta de Linkedin
+lblLinkedinFault=Cuenta de Linkedin invalida
+
+lblTwitter=Twitter
+promptMsgTwitter=Ingresa cuenta de Twitter
+lblTwitterFault=Cuenta de Twitter invalida
+
+
 
 #Conocimiento Formal
 
