Con mucho comentado e impresiones a consola primer version para pruebas

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -57,13 +57,14 @@ lblCurp=CURP
 promptMsgCurp=Ingresa tu CURP
 lblCurpFault=CURP Invalido
 
+lblGender=G\u00e9nero
 lblGenderFem=Femenino
 lblGenderMas=Masculino
 promptMsgGender=Ingresa tu genero
 lblGenderFault=Genero invalido
 
 lblState=Entidad de nacimiento
-promptMsgState=Ingresa tu entidada de nacimiento
+promptMsgState=Selecciona tu entidad de nacimiento
 lblGenderFault=Entidad Invalida
 
 lblNationality=Nacionalidad
@@ -82,7 +83,7 @@ promptMsgPhone=Ingresa tu numero telefonico ########
 lblPhoneFault=Telefono invalido
 
 lblSLabor=Situacion laboral actual
-promptMsgSLabor=promptMsgSLabor
+promptMsgSLabor=Selecciona tu situacion laboral actual
 lblFaultSLabor=lblFaultSLabor
 
 lblAvailability=Disponibilidad en dias habiles
