Con mucho comentado e impresiones a consola primer version para pruebas

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -73,13 +73,14 @@ lblNationalityFault=Nacionalidad invalida
 
 lblFm2=FM2 Vigente
 promptMsgFm2=Ingresa tu FM2 Vigente
-lblFm2Fault=FM" invalida
+lblFm2Fault=FM2 invalida
 
-lblPhone=Telefono
+lblPhoneNum=Telefono
 lblPhoneLada=Lada
 lblPhoneExt=Extencion
 lblPhoneType=Tipo
-promptMsgPhone=Ingresa tu numero telefonico ########
+promptMsgPhone=Ingresa tu numero telefonico
+promptMsgPhoneType=Seleccionaa el tipo de telefono
 lblPhoneFault=Telefono invalido
 
 lblSLabor=Situacion laboral actual
@@ -94,7 +95,7 @@ lblAvailabilityTh=Jueves
 lblAvailabilityFr=Viernes
 lblAvailabilitySa=Sabado
 lblAvailabilitySu=Domingo
-promptMsgAvailability=promptMsgAvailability
+promptMsgAvailability=Selecciona los dias de disponibilidad
 lblAvailabilityFault=lblAvailabilityFault
 
 lblFacebook=Facebook
