cambios de textos

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -33,7 +33,7 @@ promptMsgSecondLastName=Ingresa tu segundo apellido
 lblSecondLastNameFault=Segundo apellido invalido
 
 lblBirthday=Fecha de nacimiento
-promptMsgBirthday=Ingresa tu fecha de nacimiento
+promptMsgBirthday=Ingresa tu fecha de nacimiento (dd/mm/aaaa)
 lblBirthdayFault=Fecha de nacimiento invalida
 msgErrLastNameRequired=Fecha de nacimiento requerida
 
@@ -60,8 +60,8 @@ lblCurpFault=CURP Invalido
 lblGender=G\u00e9nero
 lblGenderFem=Femenino
 lblGenderMas=Masculino
-promptMsgGender=Ingresa tu genero
-lblGenderFault=Genero invalido
+promptMsgGender=Ingresa tu g\u00e9nero
+lblGenderFault=G\u00e9nero invalido
 
 lblState=Entidad de nacimiento
 promptMsgState=Selecciona tu entidad de nacimiento
@@ -72,14 +72,14 @@ promptMsgNationality=Ingresa tu nacionalidad
 lblNationalityFault=Nacionalidad invalida
 
 lblFm2=FM2 Vigente
-promptMsgFm2=Ingresa tu FM2 Vigente
+promptMsgFm2=Ingresa tu FM2 vigente
 lblFm2Fault=FM2 invalida
 
 lblPhoneNum=Telefono
 lblPhoneLada=Lada
-lblPhoneExt=Extencion
+lblPhoneExt=Extension
 lblPhoneType=Tipo
-promptMsgPhone=Ingresa tu numero telefonico
+promptMsgPhone=Ingresa tu n\u00famero telefonico
 promptMsgPhoneType=Seleccionaa el tipo de telefono
 lblPhoneFault=Telefono invalido
 
