--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -1,56 +1,58 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-#Registro
-
 lblEmail=Correo electronico
-promptMsgEmail=Ingresa tu correo electronico
+promptMsgEmail=Teclee el correo electronico
 lblEmailFault=Correo electronico invalido
-lblEmailDupl=Correo electronico duplicado
-msgErrInvalidEmail=El correo electronico es requerido
+lblEmailDupl=no puso el correo electronico
+msgErrInvalidEmail=msgErrInvalidEmail
 
 lblPassword=Contrase\u00f1a
-promptMsgPassword=Ingresa tu contrase\u00f1a
-lblPasswordFault=Contrase\u00f1a invalida
-msgErrPasswordRequired=La contrase\u00f1a es requerida
+promptMsgPassword=promptMsgPassword
+lblPasswordFault=lblPasswordFault
+msgErrPasswordRequired=msgErrPasswordRequired
 
 lblPasswordConfirm=Confirmar contrase\u00f1a
-promptMsgPasswordConfirm=Confirma tu contrase\u00f1a
-lblPasswordConfirmFault=Contrase\u00f1a diferente
+promptMsgPasswordConfirm=promptMsgPasswordConfirm
+lblPasswordConfirmFault=lblPasswordConfirmFault
 
 lblFirstName=Nombre
-promptMsgFirstName=Ingresa tu nombre
-lblFirstNameFault=Nombre invalido
-msgErrFirstNameRequired=El nombre es requerido
+promptMsgFirstName=promptMsgFirstName
+lblFirstNameFault=lblFirstNameFault
+msgErrFirstNameRequired=msgErrFirstNameRequired
 
 lblLastName=Primer apellido
-promptMsgLastName=Ingresa tu primer apellido
-lblLastNameFault=Apellido invalido
-msgErrLastNameRequired=El apellido es requerido
+promptMsgLastName=promptMsgLastName
+lblLastNameFault=lblLastNameFault
+msgErrLastNameRequired=msgErrLastNameRequired
 
 lblSecondLastName=Segundo apellido
-promptMsgSecondLastName=Ingresa tu segundo apellido
-lblSecondLastNameFault=Segundo apellido invalido
+promptMsgSecondLastName=promptMsgSecondLastName
+lblSecondLastNameFault=lblSecondLastNameFault
 
-lblBirthday=Fecha de nacimiento
-promptMsgBirthday=Ingresa tu fecha de nacimiento (dd/mm/aaaa)
-lblBirthdayFault=Fecha de nacimiento invalida
-msgErrLastNameRequired=Fecha de nacimiento requerida
+lblPhone=Telefono
+promptMsgPhone=promptMsgPhone
+lblPhoneFault=lblPhoneFault
 
-lblCaptcha=Ingresa el texto de la imagen
-lblTryRead=\u00bfNo lo puedes ver?
-lblTryAnotherText=intenta otro texto
-msgErrSecureCodeRequired=El codigo es requerido
+lblCaptcha=lblCaptcha
+lblTryRead=lblTryRead
+lblTryAnotherText=lblTryAnotherText
+msgErrSecureCodeRequired=msgErrSecureCodeRequired
 
-lblReset=Borrar
-lblSubmit=Enviar
-lblSave=Guardar
+lblReset=lblReset
+lblSubmit=lblSubmit
 
 msgErrUserAlreadySigned=msgErrUserAlreadySigned
-msgErrUserAlreadyExists=El usuario ya habia sido dado de alta
+msgErrUserAlreadyExists=msgErrUserAlreadyExists
 
-#Correo
-msgSubject=Correo de confirmaci\u00f3n
+msgSubject=msgSubject
+
+usrmsg_Admin_msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
+usrmsg_Admin_Data=Datos
+usrmsg_Admin_RollGroup=Role/UserGroup para edici\u00f3n
+usrmsg_Admin_ListMessage=Ninguno
+usrmsg_Admin_btnGuardar=Guardar
+usrmsg_Admin_btnReset=Restablecer
 
 #Dados personales
 lblCurp=CURP
