Correcciones a los textos

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -1,58 +1,64 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
+#Registro
+
 lblEmail=Correo electronico
-promptMsgEmail=Teclee el correo electronico
+promptMsgEmail=Ingresa tu correo electronico
 lblEmailFault=Correo electronico invalido
-lblEmailDupl=no puso el correo electronico
-msgErrInvalidEmail=msgErrInvalidEmail
+lblEmailDupl=Correo electronico duplicado
+msgErrInvalidEmail=El correo electronico es requerido
 
 lblPassword=Contrase\u00f1a
-promptMsgPassword=promptMsgPassword
-lblPasswordFault=lblPasswordFault
-msgErrPasswordRequired=msgErrPasswordRequired
+promptMsgPassword=Ingresa tu contrase\u00f1a
+lblPasswordFault=Contrase\u00f1a invalida
+msgErrPasswordRequired=La contrase\u00f1a es requerida
 
 lblPasswordConfirm=Confirmar contrase\u00f1a
-promptMsgPasswordConfirm=promptMsgPasswordConfirm
-lblPasswordConfirmFault=lblPasswordConfirmFault
+promptMsgPasswordConfirm=Confirma tu contrase\u00f1a
+lblPasswordConfirmFault=Contrase\u00f1a diferente
 
 lblFirstName=Nombre
-promptMsgFirstName=promptMsgFirstName
-lblFirstNameFault=lblFirstNameFault
-msgErrFirstNameRequired=msgErrFirstNameRequired
+promptMsgFirstName=Ingresa tu nombre
+lblFirstNameFault=Nombre invalido
+msgErrFirstNameRequired=El nombre es requerido
 
 lblLastName=Primer apellido
-promptMsgLastName=promptMsgLastName
-lblLastNameFault=lblLastNameFault
-msgErrLastNameRequired=msgErrLastNameRequired
+promptMsgLastName=Ingresa tu primer apellido
+lblLastNameFault=Apellido invalido
+msgErrLastNameRequired=El apellido es requerido
 
 lblSecondLastName=Segundo apellido
-promptMsgSecondLastName=promptMsgSecondLastName
-lblSecondLastNameFault=lblSecondLastNameFault
+promptMsgSecondLastName=Ingresa tu segundo apellido
+lblSecondLastNameFault=Segundo apellido invalido
 
-lblPhone=Telefono
-promptMsgPhone=promptMsgPhone
-lblPhoneFault=lblPhoneFault
+lblBirthday=Fecha de nacimiento
+promptMsgBirthday=Ingresa tu fecha de nacimiento (dd/mm/aaaa)
+lblBirthdayFault=Fecha de nacimiento invalida
+msgErrLastNameRequired=Fecha de nacimiento requerida
 
-lblCaptcha=lblCaptcha
-lblTryRead=lblTryRead
-lblTryAnotherText=lblTryAnotherText
-msgErrSecureCodeRequired=msgErrSecureCodeRequired
+lblCaptcha=Ingresa el texto de la imagen
+lblTryRead=\u00bfNo lo puedes ver?
+lblTryAnotherText=intenta otro texto
+msgErrSecureCodeRequired=El codigo es requerido
 
-lblReset=lblReset
-lblSubmit=lblSubmit
+lblReset=Borrar
+lblSubmit=Enviar
+lblSave=Guardar
 
 msgErrUserAlreadySigned=msgErrUserAlreadySigned
-msgErrUserAlreadyExists=msgErrUserAlreadyExists
+msgErrUserAlreadyExists=El usuario ya habia sido dado de alta
 
-msgSubject=msgSubject
-
+#adm registro
 usrmsg_Admin_msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
 usrmsg_Admin_Data=Datos
 usrmsg_Admin_RollGroup=Role/UserGroup para edici\u00f3n
 usrmsg_Admin_ListMessage=Ninguno
 usrmsg_Admin_btnGuardar=Guardar
 usrmsg_Admin_btnReset=Restablecer
+
+#Correo
+msgSubject=Correo de confirmaci\u00f3n
 
 #Dados personales
 lblCurp=CURP
@@ -120,13 +126,7 @@ lblTwitter=Twitter
 promptMsgTwitter=Ingresa cuenta de Twitter
 lblTwitterFault=Cuenta de Twitter invalida
 
-
-
 #Conocimiento Formal
-
-lbl=
-promptMsg=
-lblFault=
 
 lbl=
 promptMsg=
@@ -137,23 +137,7 @@ lbl=
 promptMsg=
 lblFault=
 
-lbl=
-promptMsg=
-lblFault=
-
-lbl=
-promptMsg=
-lblFault=
-
 #Competencias
-lbl=
-promptMsg=
-lblFault=
-
-lbl=
-promptMsg=
-lblFault=
-
 lbl=
 promptMsg=
 lblFault=
@@ -163,23 +147,8 @@ lbl=
 promptMsg=
 lblFault=
 
-lbl=
-promptMsg=
-lblFault=
-
-lbl=
-promptMsg=
-lblFault=
-
 #Documentos provatorios
 lbl=
 promptMsg=
 lblFault=
 
-lbl=
-promptMsg=
-lblFault=
-
-lbl=
-promptMsg=
-lblFault=
