--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/favoriteWebPages/SWBFavoriteWebPagesResource_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/favoriteWebPages/SWBFavoriteWebPagesResource_en.properties
@@ -2,3 +2,6 @@ msgOkBookmarkResource=This page is marked as a favorite
 msgAlreadyBookmarkResource=This page was already bookmarked
 msgErrBookmarkResource=It was not possible to bookmark this page
 msgOkUncheckResource=Esta p\u00e1gina fue desmarcada
+
+lblBookmarkThisPage=Bookmark this page
+lblDeleteBookmark=Delete bookmark
