--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/favoriteWebPages/SWBFavoriteWebPagesResource_es.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/favoriteWebPages/SWBFavoriteWebPagesResource_es.properties
@@ -1,4 +1,7 @@
-msgOkBookmarkResource=Esta p\u00e1gina est\u00e1 marcada como favorita
+msgOkBookmarkResource=Esta p\u00e1gina fue marcada como favorita
 msgAlreadyBookmarkResource=Esta p\u00e1gina ya estaba marcada como favorita
 msgErrBookmarkResource=No fue posible marcar esta p\u00e1gina
 msgOkUncheckResource=Esta p\u00e1gina fue desmarcada
+
+lblBookmarkThisPage=Agregar como favorita
+lblDeleteBookmark=Quitar de favoritos
