--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -9,6 +9,11 @@ lblEmailFault=Correo electronico invalido
 lblEmailDupl=Correo electronico duplicado
 msgErrInvalidEmail=El correo electronico es requerido
 
+lblLogin=Usuario
+promptMsgLogin=Ingresa tu nombre de usuario
+lblLoginFault=Nombre de usuario invalido
+msgErrLoginRequired=El nombreLa contrase\u00f1a es requerida
+
 lblPassword=Contrase\u00f1a
 promptMsgPassword=Ingresa tu contrase\u00f1a
 lblPasswordFault=Contrase\u00f1a invalida
@@ -50,12 +55,16 @@ msgErrUserAlreadySigned=msgErrUserAlreadySigned
 msgErrUserAlreadyExists=El usuario ya habia sido dado de alta
 
 #adm registro
-usrmsg_Admin_msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
-usrmsg_Admin_Data=Datos
-usrmsg_Admin_RollGroup=Role/UserGroup para edici\u00f3n
-usrmsg_Admin_ListMessage=Ninguno
-usrmsg_Admin_btnGuardar=Guardar
-usrmsg_Admin_btnReset=Restablecer
+msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
+lblData=Datos
+lblRollGroup=Role/UserGroup para edici\u00f3n
+lblListMessage=Ninguno
+lblGuardar=Guardar
+lblReset=Restablecer
+lblInsToActivate=Instrucciones del correo
+lblGratefulness=Agradecimiento
+lblCongratulations=Felicitaci\u00f3n
+msgNoMsg=Sin mensaje {link}
 
 #Correo
 msgSubject=Correo de confirmaci\u00f3n
@@ -125,30 +134,8 @@ lblLinkedinFault=Cuenta de Linkedin invalida
 lblTwitter=Twitter
 promptMsgTwitter=Ingresa cuenta de Twitter
 lblTwitterFault=Cuenta de Twitter invalida
-
 #Conocimiento Formal
-
-lbl=
-promptMsg=
-lblFault=
-
 #Experiencia Profesional
-lbl=
-promptMsg=
-lblFault=
-
 #Competencias
-lbl=
-promptMsg=
-lblFault=
-
 #Investigacion y docencia
-lbl=
-promptMsg=
-lblFault=
-
 #Documentos provatorios
-lbl=
-promptMsg=
-lblFault=
-
