--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/ProgressBarResource_en.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/ProgressBarResource_en.properties
@@ -1,5 +1,5 @@
 lblSchooling=Formaci\u00f3n escolar
-lblDegrees=Grados acad\u00e9micos
+lblDegrees=Schooling
 lblHigherEducation=Estudios superiores
 lblCourses=Diplomados, cursos y certificaciones
 lblSpecializationICT=Especializaci\u00f3n en TIC
