agregar textos que  faltaban

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister_es.properties
@@ -12,7 +12,7 @@ msgErrInvalidEmail=El correo electronico es requerido
 lblLogin=Usuario
 promptMsgLogin=Ingresa tu nombre de usuario
 lblLoginFault=Nombre de usuario invalido
-msgErrLoginRequired=El nombreLa contrase\u00f1a es requerida
+msgErrLoginRequired=La contrase\u00f1a es requerida
 
 lblPassword=Contrase\u00f1a
 promptMsgPassword=Ingresa tu contrase\u00f1a
@@ -140,3 +140,7 @@ lblTwitterFault=Cuenta de Twitter invalida
 #Competencias
 #Investigacion y docencia
 #Documentos provatorios
+promptMsgCaptcha=Ingresa el texto de la imagen
+lblCaptchaFault=El codigo es incorrecto
+lblLoginDupl=Nombre de usuario duplicado
+lblSeccion=Seccion donde continuara
