--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager_es.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager_es.properties
@@ -1,9 +1,19 @@
-usrmsg_doView_titleLbl=Reservar sala de juntas
-usrmsg_doAdmin_resourceUpdatedMsg=Se actualiz\u00f3 exitosamente el recurso con identificador
-usrmsg_doAdmin_EditionLbl=Rol/Grupo de usuarios para edici\u00f3n
-usrmsg_doAdmin_rolesLbl=Roles
-usrmsg_doAdmin_userGroupsLbl=Grupo de usuarios
-usrmsg_doAdmin_rolesNotFoundMsg=No se encontraron roles
-usrmsg_doAdmin_saveLbl=Guardar
-usrmsg_doAdmin_resetLbl=Restablecer
-usrmsg_doAdmin_noRequiredLbl=No es requerido
+lblTitle=Reservar sala de juntas
+promptMsgResourceUpdated=Se actualiz\u00f3 exitosamente el recurso con identificador
+lblGrantEdition=Rol/Grupo de usuarios para edici\u00f3n
+lblRoles=Roles
+lblUserGroups=Grupos de usuario
+lblRolesNotFoundFault=No se encontraron roles
+lblSave=Guardar
+lblReset=Restablecer
+lblNoRequired=No es requerido
+
+msgErrRoomMismatch=La sala no corresponde a ninguna sala v\u00e1lida
+msgErrHourMismatch=El horario de reservaci\u00f3n es incorrecto
+msgErrMoviteMissing=El motivo de la reservaci\u00f3n es requerido
+msgErrMeetTypeMissing=El tipo de reuni\u00f3n es requerido
+msgErrCafeteriaMissing=El tipo de cafeter\u00eda es requerido
+msgErrCafeServiceMissing=El horario de servicio de cafeter\u00eda es requerido
+msgErrTurnOutMissing=El n\u00famero de asistentes es requerido
+msgErrTurnOutMismatch=El n\u00famero de asistentes supera la capacidad de la sala seleccionada
+msgErrReservationMismatch=Los vulcanos dicen no poder viajar en el tiempo
