--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBALogs_pt.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBALogs_pt.properties
@@ -1,10 +1,10 @@
 # Sample ResourceBundle properties file
 
-LogConfig=Configura\u00E7\u00E3o do hist\u00F3rico
+LogConfig=Configura\u00e7\u00e3o do hist\u00f3rico
 
 LogType=Tipo de log
 
-selectContent=Conte\u00FAdo
+selectContent=Conte\u00fado
 
 selectDevice=Dispositivo
 
@@ -26,47 +26,47 @@ selectSubType=Subtipo
 
 selectRule=Regra
 
-selectTM=Mapa de t\u00F3picos
+selectTM=Mapa de t\u00f3picos
 
-selectTP=T\u00F3pico
+selectTP=T\u00f3pico
 
 selectTpl=Modelo
 
 selectGrpTpl=Grupo de modelo
 
-selectRepCols=Seleciona as colunas que deseja ver o hist\u00F3rico.
+selectRepCols=Seleciona as colunas que deseja ver o hist\u00f3rico.
 
-msgAction=A\u00E7\u00E3o
+msgAction=A\u00e7\u00e3o
 
-msgDesc=Descri\u00E7\u00E3o
+msgDesc=Descri\u00e7\u00e3o
 
 msgDate=Data
 
 msgPerform=Feito por
 
-msgPagesOptions=Op\u00E7\u00F5es de pagina\u00E7\u00E3o
+msgPagesOptions=Op\u00e7\u00f5es de pagina\u00e7\u00e3o
 
-pageRows=R\u00E9gua por p\u00E1gina
+pageRows=R\u00e9gua por p\u00e1gina
 
-showPageNumbers=Mostrar n\u00FAmero de p\u00E1ginas
+showPageNumbers=Mostrar n\u00famero de p\u00e1ginas
 
-pageNumbersToShow=N\u00FAmero de p\u00E1ginas para serem visualizadas
+pageNumbersToShow=N\u00famero de p\u00e1ginas para serem visualizadas
 
-nextPageText=Texto para pr\u00F3xima p\u00E1gina
+nextPageText=Texto para pr\u00f3xima p\u00e1gina
 
-previousPageText=Texto para p\u00E1gina anterior
+previousPageText=Texto para p\u00e1gina anterior
 
 btnSend=Enviar
 
-btnViewLog=Ver hist\u00F3rico
+btnViewLog=Ver hist\u00f3rico
 
-defaultValueNext=Pr\u00F3ximo
+defaultValueNext=Pr\u00f3ximo
 
 defaultValuePrevious=Anterior
 
-thAction=A\u00E7\u00E3o
+thAction=A\u00e7\u00e3o
 
-thDescription=Descri\u00E7\u00E3o
+thDescription=Descri\u00e7\u00e3o
 
 thPerformedBy=Feito por
 
@@ -74,9 +74,9 @@ thDate=Data
 
 linkAdminView=Admin
 
-selectFilter=Filtro de administra\u00E7\u00E3o
+selectFilter=Filtro de administra\u00e7\u00e3o
 
-selectUser=Usu\u00E1rio
+selectUser=Usu\u00e1rio
 
 selectResourceType=Tipo de recurso
 
@@ -84,8 +84,12 @@ selectCamp=Campanha
 
 selectIpFilter=Filtro IP
 
-selectPFlow=Fluxo de publica\u00E7\u00E3o
+selectPFlow=Fluxo de publica\u00e7\u00e3o
 msg_reload=Recarregar
-msg_export=Exporta\u00E7\u00E3o
+msg_export=Exporta\u00e7\u00e3o
 msg_allLog=Mostrar Todos Log
 msg_modelLog=Bitacora modelo
+thElementID=Elemento
+thClass=Tipo
+msgObj=Id Elemento
+msgClass=Tipo del elemento
