--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBALogs_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBALogs_en.properties
@@ -88,3 +88,7 @@ msg_reload=Reload
 msg_export=Export
 msg_allLog=Show all Log
 msg_modelLog=Show Model Log
+thElementID=Element
+thClass=Type
+msgObj=Element Id
+msgClass=Element type
