--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/LiteFileRepository_en.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/LiteFileRepository_en.properties
@@ -324,3 +324,4 @@ mustBeSigned=You must be signed to use the document repository.
 msgBTNUpdate=Update
 btnBack=Back
 msgNextVersion=Next version
+msgFolderSupport=Allow creation of folders
