--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -46,3 +46,4 @@ lbl_relatesApps=Related Applications
 lbl_NOrelatesApps=There are no related applications
 lbl_lastDownload=Last Download
 lbl_lastView=Last visit
+lbl_date=Date
