--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -47,3 +47,5 @@ lbl_NOrelatesApps=There are no related applications
 lbl_lastDownload=Last Download
 lbl_lastView=Last visit
 lbl_date=Date
+lbl_numcomments=Number of Comments
+lbl_numapps=Number of Applications
