--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -49,3 +49,4 @@ lbl_lastView=Last visit
 lbl_date=Date
 lbl_numcomments=Number of Comments
 lbl_numapps=Number of Applications
+lbl_val1=Not Advisable
