Se agregaron etiquetas

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_en.properties
@@ -13,3 +13,7 @@ lbl_byrecent=Latest
 lbl_byvisited=Most viewed
 lbl_bydownload=Most downloaded
 lbl_byvaluated=Highest Rated
+lbl_data=Data
+lbl_catalogdata=View Data Catalog
+lbl_about=about
+lbl_alltopics=All topics
