--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_es.properties
@@ -13,3 +13,7 @@ lbl_orderby=Ordenar
 lbl_byvisited=M\u00e1s visitado
 lbl_bydownload=M\u00e1s descargado
 lbl_byvaluated=Mejor calificado
+lbl_data=Datos
+lbl_catalogdata=Ver Cat\u00e1logo de Datos
+lbl_about=sobre
+lbl_alltopics=Todos los temas
