Se agregaron etiquetas para internacionalización

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -51,3 +51,4 @@ lbl_numcomments=Number of Comments
 lbl_numapps=Number of Applications
 lbl_val1=Not Advisable
 lbl_notDSfound=Datasets not found
+lbl_all=View All
