--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_en.properties
@@ -10,9 +10,9 @@ lbl_topic=Topic
 lbl_notDSfound=Datasets not found
 lbl_orderby=Order by
 lbl_byrecent=Latest
-lbl_byvisited=Most viewed
-lbl_bydownload=Most downloaded
-lbl_byvaluated=Highest Rated
+lbl_byvisited=Viewed
+lbl_bydownload=Downloaded
+lbl_byvaluated=Rated
 lbl_data=Data
 lbl_catalogdata=View Data Catalog
 lbl_about=about
