--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
@@ -34,3 +34,7 @@ lbl_orderby=Sort
 lbl_byrecent=Latest
 lbl_bydownload=Most downloaded
 lblSubmit=Save
+lblCancel=Back
+lbl_active=Active
+lbl_updatefile=Update file
+lbl_vercomment=New version file comment
