--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -13,9 +13,9 @@ lbl_searchDS1=Search Dataset
 lbl_searchDS2=Search Result
 lbl_orderby=Order by
 lbl_byrecent=Latest
-lbl_byvisited=Most viewed
-lbl_bydownload=Most downloaded
-lbl_byvaluated=Highest Rated
+lbl_byvisited=Viewed
+lbl_bydownload=Downloaded
+lbl_byvaluated=Rated
 lbl_publisher=Publisher
 lbl_formats=Format
 lbl_updated=Update
@@ -52,3 +52,5 @@ lbl_numapps=Number of Applications
 lbl_val1=Not Advisable
 lbl_notDSfound=Datasets not found
 lbl_all=View All
+lbl_download=Download
+lbl_filename=File
