se modifica implementacion

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
@@ -7,9 +7,9 @@ lbl_sinResultados=No results
 lbl_filterCategory=Filter by category
 lbl_filterIntitution=Filter by institution
 lbl_filterAuthor=Filter by author
-rd_mejorCalificada=Top rated
-rd_masComentadas=Most comments
-rd_fecha=Upload date
+lbl_mejorCalificada=Rated
+lbl_masComentadas=Comments
+lbl_fecha=Latest
 lbl_ordenar=Order
 lbl_autorDetalle=Author:
 lbl_fechaCracionDetalle=Creation date:
@@ -43,3 +43,9 @@ lbl_time1=Cerca de
 lbl_resTime=resultados
 lbl_segundos=segundos
 lbl_numComment=Number of comments
+lbl_agreement=I accept use license and terms
+lbl_promtTitleAPP=Enter the title of your application
+lbl_titleFault=Title invalid
+lbl_textAreaFault=no debe introducir caracteres especiales solo letras y numeros
+lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
+lbl_notAppFound=No se encontraron aplicaciones
