se agrega imlementacion en el guardado para agregar nuevo campo

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
@@ -48,4 +48,7 @@ lbl_promtTitleAPP=Enter the title of your application
 lbl_titleFault=Title invalid
 lbl_textAreaFault=no debe introducir caracteres especiales solo letras y numeros
 lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
-lbl_notAppFound=No se encontraron aplicaciones
+lbl_notAppFound=Applications not found
+lbl_all=Todos
+lbl_category=Category
+msg_appExito=Your application has been saved successfully passed the validation process for approval.
