--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
@@ -48,4 +48,7 @@ lbl_promtTitleAPP=Ingresa el titulo de tu aplicacion
 lbl_titleFault=Titulo inv\u00e1lido
 lbl_textAreaFault=no debe introducir caracteres especiales solo letras y numeros
 lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
-lbl_notAppFound=Applications not found
+lbl_notAppFound=No se encontraron aplicaciones
+lbl_all=View all
+lbl_category=Categoria
+msg_appExito=Su aplicacion ha sido guardada exitosamente, pasara al proceso de validaci\u00f3n para su aprobaci\u00f3n.
