--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
@@ -28,13 +28,14 @@ lbl_puburlmissing=Publisher WebSite missing
 lblReset=Reset
 lbl_searchDS1=Dataset search
 btn_search=Search
-lbl_byvisited=Most viewed
+lbl_byvisited=Viewed
 lbl_byvaluated=Highest Rated
 lbl_orderby=Sort
 lbl_byrecent=Latest
-lbl_bydownload=Most downloaded
+lbl_bydownload=Downloaded
 lblSubmit=Save
 lblCancel=Back
 lbl_active=Active
 lbl_updatefile=Update file
 lbl_vercomment=New version file comment
+lbl_approve=Approve
