--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_es.properties
@@ -29,12 +29,13 @@ lblReset=Reset
 lbl_searchDS1=B\u00fasqueda de Dataset
 btn_search=Buscar
 lbl_orderby=Ordenar
-lbl_byrecent=M\u00e1s reciente
-lbl_byvisited=M\u00e1s visitado
-lbl_bydownload=M\u00e1s descargado
-lbl_byvaluated=Mejor calificado
+lbl_byrecent=Recientes
+lbl_byvisited=Consultados
+lbl_bydownload=Descargados
+lbl_byvaluated=Calificados
 lblSubmit=Guardar
 lblCancel=Regresar
 lbl_active=Activo
 lbl_updatefile=Actualizar archivo
 lbl_vercomment=Comentario para nueva versi\u00f3n del archivo
+lbl_approve=Aprobado
