--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
@@ -39,3 +39,6 @@ lbl_active=Active
 lbl_updatefile=Update file
 lbl_vercomment=New version file comment
 lbl_approve=Approve
+lbl_searchDS2=Search Result
+msg_noresults=No results
+msg_secs=seconds
