Se agrega etiquetas y e hace implementacion para el guardado de una lista de datasets

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
@@ -34,7 +34,7 @@ btn_appGuardar=Save
 btn_appCancelar=Cancel
 lbl_appUserLoggeo=You need to be currently logged
 btn_appActualizar=Update
-lbl_DSUsado=Dataset used:
+lbl_DSUsado=Dataset:
 lbl_editar=Edit
 lbl_editAPP=Edit an application
 pg_gofirst=Go to top
@@ -42,7 +42,7 @@ pg_golast=Go to end
 lbl_time1=Cerca de
 lbl_resTime=resultados
 lbl_segundos=segundos
-lbl_numComment=Number of comments
+lbl_numComment=Comments
 lbl_agreement=I accept use license and terms
 lbl_promtTitleAPP=Enter the title of your application
 lbl_titleFault=Title invalid
@@ -51,4 +51,14 @@ lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar lo
 lbl_notAppFound=Applications not found
 lbl_all=Todos
 lbl_category=Category
-msg_appExito=Your application has been saved successfully passed the validation process for approval.
+msg_appExito=The application has been loaded onto the platform and will be validated before publication. Thank you for your contribution.
+lbl_appDownloads=Downloads:
+lbl_rated=Rating:
+lbl_descargarAPP=Download Application 
+lbl_dsRelated=Related datasets
+lbl_viewAll=View all
+lbl_appRelated=Related Applications
+lbl_promtTextArea=Enter a description of your application
+lbl_invalidMsjTA=Invalid data
+lbl_promtURL=Enter the url of your application for download
+lbl_invalidURL=Invalid URL
